--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body ng-controller="mainCtrl">
 
     <p>Hello, {{myName}}.</p>
-    <show-time></show-time>
+    <show-time aname="myName" title="Sir "></show-time>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
     <script src='js/app.js'></script>
